seo: Enhance meta description and keywords for better ranking

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Primary Meta Tags -->
     <title>Manav Shah | Software Engineer | Full Stack & Multi-Platform Developer</title>
     <meta name="title" content="Manav Shah | Software Engineer | Full Stack & Multi-Platform Developer" />
-    <meta name="description" content="Manav Shah - Experienced Software Engineer specializing in Full Stack Development, Java, Spring Boot, Angular, React, Mobile Development (Android/iOS), DevOps, and AI/ML. 3.5+ years of experience building enterprise applications and multi-platform solutions." />
-    <meta name="keywords" content="Manav Shah, Software Engineer, Full Stack Developer, Java Developer, Spring Boot, Angular, React, Kotlin, Swift, Mobile Developer, Android Developer, iOS Developer, DevOps, AI Developer, LangChain, Web Developer, Pune, India, Wishtree Technologies" />
+    <meta name="description" content="Manav Shah - Software Engineer from Pune, India. Expert in Java, Spring Boot, Angular, React, Kotlin, Swift. Full Stack Developer with 3.5+ years experience at Wishtree Technologies. Specializing in Mobile Development (Android/iOS), DevOps (Docker, Jenkins), AI/ML, and Enterprise Applications. Contact: manav.march12@gmail.com" />
+    <meta name="keywords" content="Manav Shah, Manav Shah Software Engineer, Manav Shah Developer, Manav Shah Pune, Manav Shah Portfolio, Manav Shah Java, Manav Shah Wishtree, Software Engineer, Full Stack Developer, Java Developer, Spring Boot Developer, Angular Developer, React Developer, Kotlin Developer, Swift Developer, Mobile App Developer, Android Developer, iOS Developer, DevOps Engineer, AI Developer, LangChain Developer, Web Developer, Pune Developer, India Software Engineer, Wishtree Technologies, manav.march12@gmail.com" />
     <meta name="author" content="Manav Shah" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
